methods.basics.Methods.scala.error
Erreur de compilation :
Methods:1: error: not found: value n
def goAndGet() {n=0; while (!estSurBiscuit()) {avance();n=n+1}
                ^Methods:1: error: not found: value n
def goAndGet() {n=0; while (!estSurBiscuit()) {avance();n=n+1}
                                                        ^Methods:3: error: not found: value n
                for (k<-1 to n) {recule()}
                             ^