methods.basics.Methods.scala.code
def goAndGet() {n=0; while (!estSurBiscuit()) {avance();n=n+1}
                prendBiscuit()
                for (k<-1 to n) {recule()}
                
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}